# rescript-openapi

./: Cargo.toml  ECOSYSTEM.scm  LICENSE  META.scm  README.adoc  SECURITY.md  STATE.scm
.claude/: CLAUDE.md
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
src/: ir.rs  lib.rs  main.rs  parser.rs
src/codegen/: client.rs  mod.rs  schema.rs  types.rs
tests/: codegen_tests.rs
tests/fixtures/: complex.yaml
tests/snapshots/: codegen_tests__complex_client.snap  codegen_tests__complex_schema.snap  codegen_tests__complex_types.snap  codegen_tests__petstore_client.snap  codegen_tests__petstore_schema.snap  codegen_tests__petstore_types.snap
